# featureform-hacks

./: main.py
ai-friend/: .gitignore  test.py
frontend/: .gitignore  app.config.js  app.json  helper.js  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx  newpage.js
frontend/app/api/: conversation.ts  events.ts  group.ts  index.ts  onboarding.ts  users.ts
frontend/app/camera/: index.js
frontend/app/home/: index.tsx  mock-people.ts  mock.ts
frontend/app/home/events/: [id].tsx
frontend/app/home/events/components/: CompactProfileCard.tsx  EventCard.tsx  EventPage.tsx  EventPageHeader.tsx  PeopleSection.tsx  ProfileCard.tsx
frontend/app/home/events/user/: [id].tsx
frontend/app/home/events/user/spark-up/: [id].tsx
frontend/app/onboarding/: index.tsx
frontend/app/profile/: add-event.tsx  index.tsx
frontend/app/styles/: global.js
frontend/components/: EventCard.tsx  FloatingCamButton.tsx  ProfileButton.tsx
frontend/hooks/: useFonts.ts
node-backend/: .gitignore  index.js  package-lock.json  package.json  server.js
node-backend/src/: app.js
node-backend/src/controllers/: events.js  onboardingController.js  user_and_event.js  users.js
node-backend/src/services/: onboardingService.js
node-backend/src/utils/: config.js  resumeParser.js  routes.js
people-search/: agent.py  data.mcp.py  linkedin.py  logger.py  main.py  mcp_client.py  pyproject.toml  requirements.txt  setup.sh
